--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -9,10 +9,10 @@
     .about_date{
         font-size: 20px;
         font-weight: 700;
+        margin-bottom: 20px;
     }
     .about_inner{
         display: flex;
-        padding-top: 30px;
         .aboutbanner {
             @include flexPosition;
             flex: 1.5;
@@ -20,9 +20,9 @@
             height: 100%;
             bottom: 0;
             border-radius: 10px;
-            max-height: 800px;
-            transition: 1;
             overflow: hidden;
+            transform: translateY(0px);
+            transition: 1s;
             .careerdata {
                 width: 100%;
                 margin-bottom: 20px;
@@ -114,6 +114,9 @@
                     flex-direction: column;
                     align-items: flex-start;
                 }
+            }
+            .aboutcard:last-child{
+                margin: 0;
             }
         }
         .aboutcard.todo{
