--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -55,21 +55,28 @@
             }
             .project_footer{
                 width: 100%;
-                padding: 10px;
+                height: 100%;
                 border-radius: 0 0 9px 9px;
                 border-top: 1px solid black;
-                bottom: 0;
-                padding: 5% 10%;
                 background: black;
+                box-sizing: border-box;
                 .myimg {
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    overflow: hidden;
                     img{
                         max-width:100%;
                         max-height: 100%;
                         background-position: center center;
                         background-size: contain;
+                        transform: translateY(-150px);
+                        transition: 1s ease-in-out;
+                    }
+                    @media screen and (max-width: 1020px ) {
+                        img{
+                            transform: translateY(0px);
+                        }
                     }
                 }
             }
