--- a/src/components/app.css
+++ b/src/components/app.css
@@ -7,8 +7,8 @@
 }
 
 html, body {
+  width: 100%;
   height: 100%;
-  max-width: 1920px;
   font-family: KoPub Dotum;
   font-weight: 300;
 }
@@ -33,10 +33,14 @@ a {
 .app {
   -webkit-transition: .5s;
   transition: .5s;
+  width: 100%;
+  background: red;
 }
 
 .app .wrapper {
   padding: 30px;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
 .app header {
