--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -9,8 +9,8 @@
 }
 
 html,body {
+    width: 100%;
     height: 100%;
-    max-width: 1920px;
     font-family: KoPub Dotum;
     font-weight: 300;
 }
@@ -34,8 +34,12 @@ a{
 
 .app{
     transition: .5s;
+    width: 100%;
+    background: red;
     .wrapper{
         padding: 30px;
+        max-width: 1920px;
+        margin: 0 auto;
     }
     header {
         display: flex;
