--- a/src/components/common/footer.scss
+++ b/src/components/common/footer.scss
@@ -22,6 +22,7 @@
             }
         }
         footer {
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
