--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -10,9 +10,18 @@
         font-size: 20px;
         font-weight: 700;
         margin-bottom: 20px;
+        div{
+            margin-bottom: 10px;
+        }
+        @media screen and(max-width: 767px) {
+            font-size: 14px;
+        }
     }
     .about_inner{
         display: flex;
+        @media screen and(max-width: 1025px) {
+            flex-direction: column;
+        }
         .aboutbanner {
             @include flexPosition;
             flex: 1.5;
@@ -23,15 +32,18 @@
             overflow: hidden;
             transform: translateY(0px);
             transition: 1s;
+            @media screen and(max-width: 1025px) {
+                transform: translateY(0px) !important;
+            }
             .careerdata {
                 width: 100%;
                 margin-bottom: 20px;
-                padding: 5% 10px;
+                padding: 5% 20px;
                 .aboutdata_inner{
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: space-between;
-                    padding: 10px;
+                    padding: 10px 20px;
                     margin: 10px 0;
                     border-radius: 10px;
                     .position{
@@ -73,9 +85,9 @@
                         transform: translateY(-150px);
                         transition: 1s ease-in-out;
                     }
-                    @media screen and (max-width: 1020px ) {
+                    @media screen and (max-width: 1025px ) {
                         img{
-                            transform: translateY(0px);
+                            transform: translateY(-35px);
                         }
                     }
                 }
@@ -84,6 +96,11 @@
         .aboutcards{
             flex: 1;
             margin-left: 20px;
+            margin-top: 0px;
+            @media screen and(max-width: 1025px) {
+                margin-left: 0px;
+                margin-top: 20px;
+            }
             .aboutcard {
                 display: flex;
                 flex-direction: column;
@@ -133,9 +150,14 @@
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
+                margin: 0;
                 .todolist{
                     width: 100%;
                     justify-self: space-between;
+                    margin: 0;
+                    div{
+                        margin: 0 0 10px 0;
+                    }
                 }
             }
         }
