--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -100,6 +100,7 @@ a{
                 padding-right: 30px;
                 transition: .5s;
                 cursor: pointer;
+                z-index: 999;
 
                 @media screen and (max-width: 1025px) {
                     position: absolute;
@@ -126,6 +127,7 @@ a{
             }
 
             #mobile_nav:checked~.navi_menu {
+                position: fixed;
                 left: 0;
                 top: 0;
                 height: 100%;
