--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -31,6 +31,14 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 1025px) {
+  .app .footer .scroll_top div {
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 30px;
+  }
+}
+
 .app .footer footer {
   width: 100%;
   display: -webkit-box;
