--- a/src/components/cerousel/cerousel.css
+++ b/src/components/cerousel/cerousel.css
@@ -1,4 +1,50 @@
 .cerousel_wrap {
-  margin: 100px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 50px 0;
+}
+
+.cerousel_wrap h1 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.cerousel_wrap .cerousel_cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  height: 150px;
+  background: cornflowerblue;
+  overflow: hidden;
+}
+
+.cerousel_wrap .cerousel_cards .cerousel_card {
+  min-width: 150px;
+  min-height: 150px;
+  background: coral;
+  margin-right: 30px;
+  text-align: center;
+  padding: 10px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.cerousel_wrap .cerousel_cards .cerousel_card:last-child {
+  margin-right: 0px;
 }
 /*# sourceMappingURL=cerousel.css.map */
