--- a/src/components/common/footer.scss
+++ b/src/components/common/footer.scss
@@ -22,6 +22,7 @@
                 @media screen and (max-width: 1025px) {
                     position: fixed;
                     bottom: 0;
+                    right: 20px;
                     margin-bottom: 30px;
                 }
             }
