--- a/src/components/app.css
+++ b/src/components/app.css
@@ -41,9 +41,12 @@ a {
   padding: 30px;
   max-width: 1920px;
   margin: 0 auto;
+  padding-top: 107px;
 }
 
 .app header {
+  position: fixed;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -59,6 +62,7 @@ a {
   border-bottom: 1px solid black;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  z-index: 999;
 }
 
 .app header .logo {
