--- a/src/components/common/notfound.css
+++ b/src/components/common/notfound.css
@@ -19,9 +19,20 @@
 }
 
 .notfound h2 {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
   color: white;
   margin: 5px;
   text-align: center;
+  text-shadow: 2px 2px 2px black;
 }
 /*# sourceMappingURL=notfound.css.map */
