--- a/src/components/cerousel/cerousel.scss
+++ b/src/components/cerousel/cerousel.scss
@@ -13,16 +13,20 @@
         justify-content: flex-start;
         width: 100%;
         height: 150px;
-        background: cornflowerblue;
+        background: darkgrey;
         overflow: hidden;
+        border-radius: 10px;
         .cerousel_card{
-            min-width: 150px;
-            min-height: 150px;
-            background: coral;
+            background: gray;
             margin-right: 30px;
             text-align: center;
             padding: 10px 0;
             box-sizing: border-box;
+            border-radius: 10px;
+            user-select: none;
+        }
+        .cerousel_card:first-child{
+            margin-left: 15px;
         }
         .cerousel_card:last-child{
             margin-right: 0px;
