--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -33,6 +33,11 @@
                         }
                     }
                 }
+                .subdata:last-child {
+                    .subdata_inner:last-child{
+                        margin-bottom: 0;
+                    }
+                }
             }
             .subdata_detail{
                 height: 500px;
