--- a/src/components/app.css
+++ b/src/components/app.css
@@ -6,6 +6,10 @@
   src: url(//cdn.jsdelivr.net/font-kopub/1.0/KoPubDotum-Light.eot?#iefix) format("embedded-opentype"), url(//cdn.jsdelivr.net/font-kopub/1.0/KoPubDotum-Light.woff) format("woff"), url(//cdn.jsdelivr.net/font-kopub/1.0/KoPubDotum-Light.ttf) format("truetype");
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 html, body {
   width: 100%;
   height: 100%;
