--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -8,6 +8,10 @@
         url(//cdn.jsdelivr.net/font-kopub/1.0/KoPubDotum-Light.ttf) format('truetype');
 }
 
+*{
+    -webkit-tap-highlight-color: transparent;
+}
+
 html,body {
     width: 100%;
     height: 100%;
