--- a/src/components/cerousel/cerousel.css
+++ b/src/components/cerousel/cerousel.css
@@ -36,9 +36,9 @@
 
 .cerousel_wrap .cerousel_cards .cerousel_card {
   background: gray;
+  width: 150px;
   margin-right: 30px;
   text-align: center;
-  padding: 10px 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 10px;
@@ -46,6 +46,24 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cerousel_wrap .cerousel_cards .cerousel_card .card div img {
+  width: 130px;
+  height: 130px;
+  background-position: center center;
+  background-size: contain;
+  border-radius: 10px;
+  -webkit-user-drag: none;
 }
 
 .cerousel_wrap .cerousel_cards .cerousel_card:first-child {
