--- a/src/components/cerousel/cerousel.scss
+++ b/src/components/cerousel/cerousel.scss
@@ -18,12 +18,27 @@
         border-radius: 10px;
         .cerousel_card{
             background: gray;
+            width: 150px;
             margin-right: 30px;
             text-align: center;
-            padding: 10px 0;
             box-sizing: border-box;
             border-radius: 10px;
             user-select: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .card{
+                div{
+                    img{
+                        width: 130px;
+                        height:130px;
+                        background-position: center center;
+                        background-size: contain;
+                        border-radius: 10px;
+                        -webkit-user-drag: none;
+                    }
+                }
+            }
         }
         .cerousel_card:first-child{
             margin-left: 15px;
