--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,143 @@
+@-webkit-keyframes left100 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes left100 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes left90 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes left90 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes left80 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes left80 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes left70 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes left70 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes left60 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes left60 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes right100 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes right100 {
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes right90 {
+  100% {
+    -webkit-transform: rotate(144deg);
+            transform: rotate(144deg);
+  }
+}
+
+@keyframes right90 {
+  100% {
+    -webkit-transform: rotate(144deg);
+            transform: rotate(144deg);
+  }
+}
+
+@-webkit-keyframes right80 {
+  100% {
+    -webkit-transform: rotate(108deg);
+            transform: rotate(108deg);
+  }
+}
+
+@keyframes right80 {
+  100% {
+    -webkit-transform: rotate(108deg);
+            transform: rotate(108deg);
+  }
+}
+
+@-webkit-keyframes right70 {
+  100% {
+    -webkit-transform: rotate(72deg);
+            transform: rotate(72deg);
+  }
+}
+
+@keyframes right70 {
+  100% {
+    -webkit-transform: rotate(72deg);
+            transform: rotate(72deg);
+  }
+}
+
+@-webkit-keyframes right60 {
+  100% {
+    -webkit-transform: rotate(36deg);
+            transform: rotate(36deg);
+  }
+}
+
+@keyframes right60 {
+  100% {
+    -webkit-transform: rotate(36deg);
+            transform: rotate(36deg);
+  }
+}
+
 .portfoilo_inner .aboutcards h3 {
   margin: 0 0 30px 0;
 }
@@ -61,7 +201,169 @@
 }
 
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail {
-  height: 500px;
+  min-height: 400px;
   border-radius: 10px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30px;
+  text-align: center;
+  padding: 0 20px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1.8);
+          transform: translate(-50%, -50%) scale(1.8);
+}
+
+@media screen and (max-width: 767px) {
+  .portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap {
+    -webkit-transform: translate(-50%, -50%) scale(1.5);
+            transform: translate(-50%, -50%) scale(1.5);
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle_inner {
+  position: absolute;
+  z-index: 6;
+  top: 50%;
+  left: 50%;
+  height: 80px;
+  width: 80px;
+  margin: -40px 0 0 -40px;
+  background: #292a2d;
+  border-radius: 100%;
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle .bar.left .progress {
+  -webkit-animation: left100 1s linear both;
+          animation: left100 1s linear both;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle .bar.right {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle .bar {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  background: rgba(51, 52, 55, 0.1);
+  -webkit-border-radius: 100%;
+  clip: rect(0px, 100px, 100px, 50px);
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle .bar .progress {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #f1f2f5;
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  clip: rect(0px, 50px, 100px, 0px);
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.hundred .bar.left .progress {
+  -webkit-animation: left100 1s linear both;
+          animation: left100 1s linear both;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.hundred .bar.right .progress {
+  -webkit-animation: right100 1s linear both;
+          animation: right100 1s linear both;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.ninety .bar.left .progress {
+  -webkit-animation: left90 1s linear both;
+          animation: left90 1s linear both;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.ninety .bar.right .progress {
+  -webkit-animation: right90 .9s linear both;
+          animation: right90 .9s linear both;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.eighty .bar.left .progress {
+  -webkit-animation: left80 1s linear both;
+          animation: left80 1s linear both;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.eighty .bar.right .progress {
+  -webkit-animation: right80 .8s linear both;
+          animation: right80 .8s linear both;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.seventy .bar.left .progress {
+  -webkit-animation: left70 1s linear both;
+          animation: left70 1s linear both;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.seventy .bar.right .progress {
+  -webkit-animation: right70 .5s linear both;
+          animation: right70 .5s linear both;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.sixty .bar.left .progress {
+  -webkit-animation: left60 1s linear both;
+          animation: left60 1s linear both;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .circle.sixty .bar.right .progress {
+  -webkit-animation: right60 .3s linear both;
+          animation: right60 .3s linear both;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .progress_text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 10;
+  font-size: 24px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap .progress_text .progress_subtext {
+  font-size: 12px;
+  text-align: center;
 }
 /*# sourceMappingURL=portfolio.css.map */
