--- a/src/components/cerousel/cerousel.scss
+++ b/src/components/cerousel/cerousel.scss
@@ -36,6 +36,7 @@
                         background-size: contain;
                         border-radius: 10px;
                         -webkit-user-drag: none;
+                        box-shadow: 2px 2px 5px 5px rgba(0,0,0,0.3);
                     }
                 }
             }
