--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -173,10 +173,16 @@
           align-items: center;
   border-radius: 10px;
   margin-bottom: 20px;
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div {
   padding: 10px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div .project_name {
+  font-weight: 600;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp {
@@ -194,6 +200,15 @@
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp button {
   margin-right: 10px;
+  width: 80%;
+  font-weight: 600;
+  border: none;
+  border-radius: 25px;
+  padding: 5px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner.celect {
+  background: rgba(155, 155, 155, 0.5);
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata:last-child .subdata_inner:last-child {
@@ -203,9 +218,31 @@
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail {
   min-height: 400px;
   border-radius: 10px;
+  background-size: cover !important;
+  background-position: center center !important;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 330px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30px;
+  text-align: center;
+  padding: 0 20px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectdata_textbox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -219,9 +256,32 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 30px;
-  text-align: center;
-  padding: 0 20px;
+  width: 100%;
+  height: 20%;
+  border-radius: 5px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectdata_textbox div {
+  margin-bottom: 10px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectdata_textbox div:last-child {
+  margin-bottom: 0;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn a button {
+  width: 200px;
+  height: 30px;
+  border: none;
+  border-radius: 25px;
+  -webkit-transition: .5s;
+  transition: .5s;
+  font-weight: 600;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn a:hover button {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail .circle_wrap {
