--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -79,8 +79,12 @@
                         align-items: center;
                         border-radius: 10px;
                         margin-bottom: 20px;
+                        transition: .5s;
                         div{
                             padding: 10px;
+                            .project_name{
+                                font-weight: 600;
+                            }
                         }
                         .button_warp{
                             width: 100%;
@@ -89,8 +93,16 @@
                             align-items: center;
                             button {
                                 margin-right: 10px;
+                                width: 80%;
+                                font-weight: 600;
+                                border: none;
+                                border-radius: 25px;
+                                padding: 5px;
                             }
                         }
+                    }
+                    .subdata_inner.celect{
+                        background: rgba(155, 155, 155,.5);
                     }
                 }
                 .subdata:last-child {
@@ -102,14 +114,49 @@
             .subdata_detail {
                 min-height: 400px;
                 border-radius: 10px;
+                background-size: cover !important;
+                background-position: center center !important;
                 .projectdata_text {
                     display: flex;
                     flex-direction: column;
-                    justify-content: center;
+                    justify-content: space-between;
+                    height: 330px;
                     align-items: center;
                     margin-top: 30px;
                     text-align: center;
                     padding: 0 20px;
+                    .projectdata_textbox{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        width: 100%;
+                        height: 20%;
+                        border-radius: 5px;
+                        div{
+                            margin-bottom: 10px;
+                        }
+                        div:last-child{
+                            margin-bottom: 0;
+                        }
+                    }
+                    .projectlinkbtn{
+                        a{
+                            button{
+                                width:200px;
+                                height: 30px;
+                                border: none;
+                                border-radius: 25px;
+                                transition: .5s;
+                                font-weight: 600;
+                            }
+                        }
+                        a:hover{
+                            button{
+                                transform: scale(.9);
+                            }
+                        }
+                    }
                 }
                 .circle_wrap{
                     position: absolute;
