--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,21 @@
+@-webkit-keyframes rotateborder {
+  0% {
+    border: 1px solid black;
+  }
+  100% {
+    border: 1px solid dimgray;
+  }
+}
+
+@keyframes rotateborder {
+  0% {
+    border: 1px solid black;
+  }
+  100% {
+    border: 1px solid dimgray;
+  }
+}
+
 @-webkit-keyframes left100 {
   100% {
     -webkit-transform: rotate(180deg);
@@ -199,16 +217,47 @@
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp button {
+  display: inline-block;
   margin-right: 10px;
   width: 80%;
   font-weight: 600;
   border: none;
-  border-radius: 25px;
+  border-radius: 15px;
   padding: 5px;
+}
+
+@media screen and (max-width: 500px) {
+  .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 0px;
+  }
+}
+
+.portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp button span:first-child {
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 500px) {
+  .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp button span:first-child {
+    margin-right: 0px;
+  }
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner.celect {
   background: rgba(155, 155, 155, 0.5);
+  animation: rotateborder 1s infinite alternate-reverse;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata:last-child .subdata_inner:last-child {
@@ -257,7 +306,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 20%;
+  height: 30%;
   border-radius: 5px;
 }
 
@@ -269,8 +318,12 @@
   margin-bottom: 0;
 }
 
+.portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn {
+  width: 100%;
+}
+
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn a button {
-  width: 200px;
+  width: 100%;
   height: 30px;
   border: none;
   border-radius: 25px;
