--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,12 @@
+@keyframes rotateborder {
+    0% {
+        border: 1px solid black
+    }
+    100% {
+        border: 1px solid dimgray;
+    }
+}
+
 @keyframes left100 {
     100% {
         transform: rotate(180deg);
@@ -92,17 +101,32 @@
                             justify-content: center;
                             align-items: center;
                             button {
+                                display: inline-block;
                                 margin-right: 10px;
                                 width: 80%;
                                 font-weight: 600;
                                 border: none;
-                                border-radius: 25px;
+                                border-radius: 15px;
                                 padding: 5px;
+                                @media screen and(max-width: 500px) {
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: center;
+                                    align-items: center;
+                                    margin-right: 0px;
+                                }
+                                span:first-child {
+                                    margin-right: 5px;
+                                    @media screen and(max-width: 500px) {
+                                        margin-right: 0px;
+                                    }
+                                }
                             }
                         }
                     }
                     .subdata_inner.celect{
                         background: rgba(155, 155, 155,.5);
+                        animation: rotateborder 1s infinite alternate-reverse;
                     }
                 }
                 .subdata:last-child {
@@ -131,7 +155,7 @@
                         justify-content: center;
                         align-items: center;
                         width: 100%;
-                        height: 20%;
+                        height: 30%;
                         border-radius: 5px;
                         div{
                             margin-bottom: 10px;
@@ -141,9 +165,10 @@
                         }
                     }
                     .projectlinkbtn{
+                        width:100%;
                         a{
                             button{
-                                width:200px;
+                                width:100%;
                                 height: 30px;
                                 border: none;
                                 border-radius: 25px;
