--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -98,22 +98,23 @@ a{
                 }
             }
 
-            #mobile_nav~.navi_menu {
+            #mobile_nav ~ label .navi_menu {
                 display: flex;
                 width: 100%;
                 height: 100%;
                 top: 0;
                 box-sizing: border-box;
                 padding-right: 30px;
-                transition: .5s;
                 cursor: pointer;
-                z-index: 999;
+                background: nones;
 
                 @media screen and (max-width: 1025px) {
                     position: absolute;
                     flex-direction: column;
                     left: -100%;
+                    height: 100vh;
                     top: 0px;
+                    transition: 1s;
                 }
 
                 li {
@@ -133,19 +134,21 @@ a{
                 }
             }
 
-            #mobile_nav:checked~.navi_menu {
-                position: fixed;
+            #mobile_nav:checked ~ label .navi_menu {
+                display: flex;
+                width: 100%;
+                margin: 0 auto;
                 left: 0;
                 top: 0;
                 height: 100%;
-                transition: 1s;
 
                 @media screen and (max-width: 1025px) {
                     display: flex;
                     left: 0;
                     top: 0;
                     white: 100%;
-                    height: 100%;
+                    height: 100vh;
+                    background: gray;
                     transition: 1s;
                 }
 
@@ -154,7 +157,6 @@ a{
                     font-weight: 300;
                     padding: 30px 30px;
                     margin: 0;
-
                     label {
                         position: absolute;
                         width: 30px;
