--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,18 +1,18 @@
 @-webkit-keyframes rotateborder {
   0% {
-    border: 1px solid black;
+    border: 3px solid black;
   }
   100% {
-    border: 1px solid dimgray;
+    border: 3px solid rgba(0, 0, 0, 0.1);
   }
 }
 
 @keyframes rotateborder {
   0% {
-    border: 1px solid black;
+    border: 3px solid black;
   }
   100% {
-    border: 1px solid dimgray;
+    border: 3px solid rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -193,6 +193,8 @@
   margin-bottom: 20px;
   -webkit-transition: .5s;
   transition: .5s;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div {
@@ -256,7 +258,7 @@
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner.celect {
-  background: rgba(155, 155, 155, 0.5);
+  background: rgba(155, 155, 155, 0.3);
   animation: rotateborder 1s infinite alternate-reverse;
 }
 
@@ -319,7 +321,13 @@
 }
 
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn {
-  width: 100%;
+  width: 300px;
+}
+
+@media screen and (max-width: 767px) {
+  .portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn {
+    width: 100%;
+  }
 }
 
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text .projectlinkbtn a button {
