--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -120,12 +120,16 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-                    padding: 5px 0;
+                    padding: 10px 0;
                     button{
                         border-radius: 15px;
                         width: 120px;
                         padding: 5px;
                         background: white;
+                        margin-top: 0px;
+                        @media screen and(max-width: 767px) {
+                            margin-top: 10px;
+                        }
                     }
                 }
                 .subdata:first-child {
