--- a/src/components/app.css
+++ b/src/components/app.css
@@ -129,7 +129,7 @@ a {
   }
 }
 
-.app header nav #mobile_nav ~ label .navi_menu {
+.app header nav #mobile_nav ~ .navi_menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -144,7 +144,7 @@ a {
 }
 
 @media screen and (max-width: 1025px) {
-  .app header nav #mobile_nav ~ label .navi_menu {
+  .app header nav #mobile_nav ~ .navi_menu {
     position: absolute;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -158,13 +158,13 @@ a {
   }
 }
 
-.app header nav #mobile_nav ~ label .navi_menu li {
+.app header nav #mobile_nav ~ .navi_menu li {
   font-size: 20px;
   font-weight: 300;
   padding: 30px 10px;
 }
 
-.app header nav #mobile_nav ~ label .navi_menu li label span {
+.app header nav #mobile_nav ~ .navi_menu li label span {
   display: none;
   width: 30px;
   height: 3px;
@@ -172,7 +172,7 @@ a {
   cursor: pointer;
 }
 
-.app header nav #mobile_nav:checked ~ label .navi_menu {
+.app header nav #mobile_nav:checked ~ .navi_menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -184,7 +184,7 @@ a {
 }
 
 @media screen and (max-width: 1025px) {
-  .app header nav #mobile_nav:checked ~ label .navi_menu {
+  .app header nav #mobile_nav:checked ~ .navi_menu {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -198,14 +198,14 @@ a {
   }
 }
 
-.app header nav #mobile_nav:checked ~ label .navi_menu li {
+.app header nav #mobile_nav:checked ~ .navi_menu li {
   font-size: 20px;
   font-weight: 300;
   padding: 30px 30px;
   margin: 0;
 }
 
-.app header nav #mobile_nav:checked ~ label .navi_menu li label {
+.app header nav #mobile_nav:checked ~ .navi_menu li .mobileclose {
   position: absolute;
   width: 30px;
   height: 30px;
@@ -214,12 +214,12 @@ a {
   margin-right: 30px;
 }
 
-.app header nav #mobile_nav:checked ~ label .navi_menu li label span {
+.app header nav #mobile_nav:checked ~ .navi_menu li .mobileclose span {
   display: none;
 }
 
 @media screen and (max-width: 1025px) {
-  .app header nav #mobile_nav:checked ~ label .navi_menu li label span {
+  .app header nav #mobile_nav:checked ~ .navi_menu li .mobileclose span {
     display: block;
     position: absolute;
     width: 30px;
@@ -231,9 +231,21 @@ a {
   }
 }
 
-.app header nav #mobile_nav:checked ~ label .navi_menu li label span:nth-child(2) {
+.app header nav #mobile_nav:checked ~ .navi_menu li .mobileclose span:nth-child(2) {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+.app header nav #mobile_nav:checked ~ .navi_menu li label {
+  position: relative;
+}
+
+.app header nav #mobile_nav:checked ~ .navi_menu li label .linkbtn {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 .app header nav .gnb ul {
@@ -251,5 +263,102 @@ a {
 
 .app header nav .gnb ul li img {
   cursor: pointer;
+}
+
+.app .footer_img_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .app .footer_img_wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 0px;
+  }
+}
+
+.app .footer_img_wrap div {
+  position: relative;
+  width: 100%;
+}
+
+.app .footer_img_wrap div .link_text {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 70%;
+  left: 12.5%;
+  top: 20%;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
+  text-align: center;
+  padding: 20px 10px;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.app .footer_img_wrap div img {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.app .footer_img_wrap div:first-child {
+  margin-right: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .app .footer_img_wrap div:first-child {
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
+}
+
+.app .gallery_btn_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.app .gallery_btn_wrap .gallery_btn {
+  font-size: 18px;
+  margin-top: 100px;
+  width: 300px;
+  border-radius: 30px;
+  height: 50px;
+  background: #eee;
+}
+
+@media screen and (max-width: 767px) {
+  .app .gallery_btn_wrap .gallery_btn {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=app.css.map */
