--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -98,7 +98,7 @@ a{
                 }
             }
 
-            #mobile_nav ~ label .navi_menu {
+            #mobile_nav ~ .navi_menu {
                 display: flex;
                 width: 100%;
                 height: 100%;
@@ -134,7 +134,7 @@ a{
                 }
             }
 
-            #mobile_nav:checked ~ label .navi_menu {
+            #mobile_nav:checked ~ .navi_menu {
                 display: flex;
                 width: 100%;
                 margin: 0 auto;
@@ -157,7 +157,7 @@ a{
                     font-weight: 300;
                     padding: 30px 30px;
                     margin: 0;
-                    label {
+                    .mobileclose {
                         position: absolute;
                         width: 30px;
                         height: 30px;
@@ -182,6 +182,16 @@ a{
                             transform: rotate(-45deg);
                         }
                     }
+                    label{
+                        position: relative;
+                        .linkbtn {
+                            position: absolute;
+                            left: 0;
+                            right:0;
+                            top:0;
+                            bottom: 0;
+                        }
+                    }
                 }
             }
 
@@ -197,6 +207,67 @@ a{
                         }
                     }
                 }
+            }
+        }
+    }
+    .footer_img_wrap{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        @media screen and(max-width: 767px) {
+            flex-direction: column;
+            margin-bottom: 0px;
+        }
+        div {
+            position: relative;
+            width: 100%;;
+            .link_text {
+                position: absolute;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 70%;
+                left: 12.5%;
+                top: 20%;
+                font-size: 20px;
+                font-weight: 700;
+                color: white;
+                text-align: center;
+                padding: 20px 10px;
+                background: rgba(0,0,0,.5);
+            }
+            img {
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+                width: 100%;
+                height: 100%;
+                border-radius: 20px;
+                box-shadow: 2px 2px 10px rgba(0,0,0,.5);
+            }
+        }
+        div:first-child{
+            margin-right: 20px;
+            @media screen and(max-width: 767px) {
+                margin-right: 0px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+    .gallery_btn_wrap{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .gallery_btn {
+            font-size: 18px;
+            margin-top: 100px;
+            width: 300px;
+            border-radius: 30px;
+            height: 50px;
+            background: #eee;
+
+            @media screen and(max-width: 767px) {
+                width: 100%;
             }
         }
     }
