--- a/src/components/cerousel/cerousel.scss
+++ b/src/components/cerousel/cerousel.scss
@@ -13,11 +13,11 @@
         justify-content: flex-start;
         width: 100%;
         height: 150px;
-        background: darkgrey;
+        background: rgba(155, 155, 155, .2);
         overflow: hidden;
         border-radius: 10px;
         .cerousel_card{
-            background: gray;
+            background: rgba(0,0,0,.2);
             width: 150px;
             margin-right: 30px;
             text-align: center;
