--- a/src/components/common/footer.scss
+++ b/src/components/common/footer.scss
@@ -18,6 +18,8 @@
                     background-repeat: no-repeat;
                     background-size: cover;
                     cursor: pointer;
+                    border-radius: 100%;
+                    padding: 5px;
                 }
                 @media screen and (max-width: 1025px) {
                     position: fixed;
