--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -156,6 +156,10 @@
   }
 }
 
+.portfoilo_inner {
+  margin-bottom: 130px;
+}
+
 .portfoilo_inner .aboutcards h3 {
   margin: 0 0 30px 0;
 }
@@ -171,9 +175,9 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   width: calc(50% - 50px);
 }
 
@@ -197,12 +201,25 @@
           box-sizing: border-box;
 }
 
-.portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div {
-  padding: 10px;
-}
-
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div .project_name {
   font-weight: 600;
+  margin: 20px 5px 10px;
+}
+
+.portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div .project_date {
+  width: 100%;
+  margin: 0 5px;
+}
+
+@media screen and (max-width: 410px) {
+  .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div .project_date {
+    width: 70px;
+    margin: 0 5px;
+  }
+}
+
+.portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner div .project_summary {
+  margin: 10px 5px;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .lately .subdata .subdata_inner .button_warp {
@@ -222,10 +239,12 @@
   display: inline-block;
   margin-right: 10px;
   width: 80%;
+  max-width: 250px;
   font-weight: 600;
   border: none;
   border-radius: 15px;
   padding: 5px;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 500px) {
@@ -262,7 +281,7 @@
   animation: rotateborder 1s infinite alternate-reverse;
 }
 
-.portfoilo_inner .aboutcards .aboutcard .lately .subdata:last-child .subdata_inner:last-child {
+.portfoilo_inner .aboutcards .aboutcard .lately .subdata:first-child .subdata_inner:last-child {
   margin-bottom: 0;
 }
 
