--- a/src/components/app.css
+++ b/src/components/app.css
@@ -45,6 +45,7 @@ a {
   max-width: 1920px;
   margin: 0 auto;
   padding-top: 107px;
+  min-height: calc(100vh - 214px);
 }
 
 .app header {
@@ -274,6 +275,7 @@ a {
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
+  margin-top: 130px;
 }
 
 @media screen and (max-width: 767px) {
@@ -311,6 +313,8 @@ a {
   text-align: center;
   padding: 20px 10px;
   background: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  z-index: 1;
 }
 
 .app .footer_img_wrap div img {
@@ -322,6 +326,7 @@ a {
   border-radius: 20px;
   -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  opacity: .8;
 }
 
 .app .footer_img_wrap div:first-child {
