--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -44,6 +44,7 @@ a{
         max-width: 1920px;
         margin: 0 auto;
         padding-top:107px;
+        min-height: calc(100vh - 214px);
     }
     header {
         position: fixed;
@@ -214,6 +215,7 @@ a{
         display: flex;
         flex-direction: row;
         width: 100%;
+        margin-top: 130px;
         @media screen and(max-width: 767px) {
             flex-direction: column;
             margin-bottom: 0px;
@@ -235,6 +237,8 @@ a{
                 text-align: center;
                 padding: 20px 10px;
                 background: rgba(0,0,0,.5);
+                border-radius: 15px;
+                z-index: 1;
             }
             img {
                 background-position: center;
@@ -244,6 +248,7 @@ a{
                 height: 100%;
                 border-radius: 20px;
                 box-shadow: 2px 2px 10px rgba(0,0,0,.5);
+                opacity: .8;
             }
         }
         div:first-child{
