--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,51 +1,6 @@
-.Login_wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: calc(100vh - 197px);
-}
-
-.Login_wrap .Login_wrap_inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.Login_wrap .Login_wrap_inner .login_logo_img img {
-  width: 100px;
-}
-
-.Login_wrap .Login_wrap_inner .Login_input {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.Login_wrap .Login_wrap_inner .Login_simple {
+.login_wrap {
+  position: relative;
   width: 100%;
-}
-
-.Login_wrap .Login_wrap_inner .Login_simple button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -55,10 +10,173 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 200px;
+  min-height: calc(100vh - 197px);
 }
 
-.Login_wrap .Login_wrap_inner .Login_simple button div img {
+.login_wrap .login_wrap_inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.login_wrap .login_wrap_inner .login_logo_img {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+.login_wrap .login_wrap_inner .login_logo_img img {
+  width: 150px;
+}
+
+@media screen and (max-width: 580px) {
+  .login_wrap .login_wrap_inner .login_logo_img img {
+    width: 100%;
+    -webkit-transform: scale(0.6);
+            transform: scale(0.6);
+  }
+}
+
+.login_wrap .login_wrap_inner .login_input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 500px;
+}
+
+@media screen and (max-width: 580px) {
+  .login_wrap .login_wrap_inner .login_input {
+    width: 100%;
+  }
+}
+
+.login_wrap .login_wrap_inner .login_input input {
+  padding: 10px 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.login_wrap .login_wrap_inner .login_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 50px;
+  width: 500px;
+  background: black;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 580px) {
+  .login_wrap .login_wrap_inner .login_btn {
+    width: 100%;
+  }
+}
+
+.login_wrap .login_wrap_inner .login_btn button {
+  background: none;
+  border: none;
+  color: white;
+}
+
+.login_wrap .login_wrap_inner .login_btn:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.login_wrap .login_wrap_inner .line {
+  width: 500px;
+  height: 1px;
+  background: white;
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 580px) {
+  .login_wrap .login_wrap_inner .line {
+    width: 100%;
+  }
+}
+
+.login_wrap .login_wrap_inner .login_simple {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.login_wrap .login_wrap_inner .login_simple .simple_text {
+  font-size: 20px;
+  font-weight: 100;
+  margin-bottom: 10px;
+}
+
+.login_wrap .login_wrap_inner .login_simple button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 500px;
+  height: 50px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 580px) {
+  .login_wrap .login_wrap_inner .login_simple button {
+    width: 100%;
+  }
+}
+
+.login_wrap .login_wrap_inner .login_simple button div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.login_wrap .login_wrap_inner .login_simple button div img {
   width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.login_wrap .login_wrap_inner .login_simple button:last-child {
+  margin-bottom: 0;
 }
 /*# sourceMappingURL=login.css.map */
