--- a/src/components/message/message.css
+++ b/src/components/message/message.css
@@ -37,7 +37,7 @@
           align-items: center;
   width: 100%;
   max-width: 1000px;
-  padding: 30px;
+  padding: 30px 15px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
