--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -18,7 +18,7 @@
         align-items: center;
         width: 100%;
         max-width: 1000px;
-        padding: 30px;
+        padding: 30px 15px;
         box-sizing: border-box;
         input{
             flex: 3;
