--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -5,6 +5,16 @@
     flex-wrap: wrap;
 }
 
+@keyframes mainborder {
+    0% {
+        border: 3px solid pink;
+    }
+
+    100% {
+        border: 3px solid thistle;
+    }
+}
+
 .about_warp {
     .about_date{
         font-size: 20px;
@@ -144,7 +154,7 @@
                     margin: 0 0 20px 0;
 
                     img {
-                        width: 18px;
+                        width: 20px;
                         box-shadow: 1px 1px 1px rgba(255,255,255,.3);
                         -webkit-user-drag: none;
                     }
@@ -153,11 +163,18 @@
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
+                    div{
+                        line-height: 25px;
+                        text-indent: 5px;
+                    }
                 }
             }
             .aboutcard:last-child{
                 margin: 0;
             }
+        }
+        .aboutcard.skills {
+            animation: mainborder 2s infinite alternate-reverse;
         }
         .aboutcard.todo{
             display: flex;
