--- a/src/components/app.css
+++ b/src/components/app.css
@@ -48,6 +48,20 @@ a {
   min-height: calc(100vh - 214px);
 }
 
+.app .wrapper.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 0px;
+  min-height: calc(100vh - 87px);
+}
+
 .app header {
   position: fixed;
   width: 100%;
