--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -160,6 +160,12 @@
   margin: 0 0 30px 0;
 }
 
+.portfoilo_inner .aboutcards h3 .hsub {
+  color: slategrey;
+  font-size: 15px;
+  margin-left: 20px;
+}
+
 .portfoilo_inner .aboutcards .aboutcard {
   position: relative;
   width: 100%;
@@ -286,6 +292,7 @@
   border-radius: 10px;
   background-size: cover !important;
   background-position: center center !important;
+  max-width: 950px !important;
 }
 
 .portfoilo_inner .aboutcards .aboutcard .subdata_detail .projectdata_text {
